--- a/benchmarks/leaderboard.ipynb
+++ b/benchmarks/leaderboard.ipynb
@@ -2062,9 +2062,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (spacedata)",
    "language": "python",
-   "name": "python3"
+   "name": "spacedata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2076,10 +2076,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.16"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
